--- a/Service.html
+++ b/Service.html
@@ -22,7 +22,7 @@
             <div class="outline">
                <h2 class="outline-title">What We Do</h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore
+                  dolore<br>
                   magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
             </div>
             <section class="service">
@@ -59,7 +59,7 @@
             <div class="outline">
                <h2 class="outline-title">We Bring Best Offer For You</h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore
+                  dolore<br>
                   magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                <a class="btn" href="#">View More Offers</a>
             </div>
